fix(mvpo): improve secondary-accent contrast

--- a/Styles/mvpo.css
+++ b/Styles/mvpo.css
@@ -11,7 +11,7 @@
     --color-bg-secondary: #e9e9e9;
     --color-link: #118bee;
     --color-secondary: #920de9;
-    --color-secondary-accent: #920de90b;
+    --color-secondary-accent: #910de936;
     --color-shadow: #f4f4f4;
     --color-table: #118bee;
     --color-text: #000;
